adjusted placeholder, added nowrap to stop errors in wrapping
I think I'm finished! Woo!

--- a/styles.css
+++ b/styles.css
@@ -250,21 +250,17 @@ a {
     color: white;
     font-weight: bold;
     font-size: 22px;
+    white-space: nowrap;
 }
 
 .callToAction p {
-    color: white;
+    color: #E5E7EB;
     font-size: 18px;
+    white-space: nowrap;
 }
 
 
-/* deals with footer */
-.footer {
-    /* border: 1px solid black; */
-    display: flex;
-    justify-content: center;
 
-}
 
 .callToAction button {
     border: 2px solid white;
@@ -279,4 +275,17 @@ a {
 button:active {
     background-color: hsl(224, 72%, 24%);
     border-color: #eee;
+}
+
+
+/* deals with footer */
+.footer {
+    /* border: 1px solid black; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 60px;
+    background-color: #1f2937;
+    color: #E5E7EB
+
 }
